src/kube/service-mesh/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: sslwildcardsobreirodevcombr
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: ric-brso-all-k8s.brazilsouth.cloudapp.azure.com
    http:
      paths:
      - path: /grafana/*
        backend:
          serviceName: grafana
          servicePort: 3000
